<resources>
    <string name="app_name">Test-Game</string>
    <string name="_428_500">428 + 500 = ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="app_logo">app_logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome">Welcome</string>
    <string name="o_rinov_ilmiddin">O\'rinov Ilmiddin</string>
    <string name="_20">20</string>
    <string name="tests">tests</string>
    <string name="_50">50</string>
    <string name="_40">40</string>
    <string name="_30">30</string>
    <string name="level">Level</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="levels">Levels</string>
    <string name="selected_tests">selectedTests</string>
    <string name="lord_dev_1701">\@lord_dev_1701</string>
    <string name="user_image">UserImage</string>
    <string name="your_level">Your level :</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="_30_tests">30 tests</string>
    <string name="_40_tests">40 tests</string>
    <string name="_50_tests">50 tests</string>
    <string name="_20_tests">20 tests</string>
    <string name="level_image">level_image</string>
    <string name="answer">Answer</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="next">Next</string>
    <string name="_0">0</string>
    <string name="slash">/</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_00_00_00">00 : 00 : 00</string>
    <string name="username">\@user_name</string>
    <string name="name">Name</string>
    <string name="_01">01</string>
    <string name="tap_to_continue">Tap to Continue</string>
    <string name="you_win">Your Result</string>
</resources>