<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvYouWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/you_win"
        android:textColor="#FFB700"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/star_2"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/star_2"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_star_border" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/star_2"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/star_2"
            android:src="@drawable/ic_star_border" />

        <TextView
            android:id="@+id/tvCompletedTests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/star_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvCompletedTestsTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="25dp"
        android:fontFamily="@font/my_font2"
        android:gravity="center"
        android:text="@string/_00_00_00"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/tap_to_continue"
        android:textColor="#FFB700"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>